Fixed alignment of video clips

--- a/src/main/resources/se/microcode/google-plugin/youtube/style.css
+++ b/src/main/resources/se/microcode/google-plugin/youtube/style.css
@@ -48,7 +48,7 @@
     position: relative;
     margin: 0.4em;
     text-align: center;
-    vertical-align: middle;
+    vertical-align: top;
 }
 
 .se-microcode_youtube-playlist-video-info
